スタブサーバーを生成できるようにした
